test/lit/pto/tilebuf_invalid_fractal_size.pto
// RUN: not ptoas --pto-arch=a3 %s 2>&1 | FileCheck %s

// CHECK: error: unsupported s_fractal_size: 16, must be one of {32, 512, 1024}

func.func @test_fractal_invalid() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
  %tb = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f16, rows=16, cols=32, v_row=16, v_col=32, blayout=row_major, slayout=none_box, fractal=16, pad=0>
  return
}